--- a/AppTel.Web/Views/PingSchedule/Index.cshtml
+++ b/AppTel.Web/Views/PingSchedule/Index.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@model AppTel.Web.Models.PingScheduleViewModel
 @{
     ViewBag.Title = "Ping Schedule";
 }
-
+@section scripts{
+    
+}
 <h2>Ping Schedule</h2>
+@Html.ActionLink("Create Job", "Create", "PingSchedule", null, new {@class="btn btn-primary"})
 
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>
+                Application Name
+            </th> 
+            <th>
+                Endpoint
+            </th>
+            <th>
+                Interval (in seconds)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var job in Model.Jobs)
+        {
+            <tr>
+                <td>
+                    @job.ApplicationName
+                </td>
+                <td>
+                    @job.Endpoint
+                </td>
+                <td>
+                    @job.RepeatIntervalInSeconds.ToString()
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
