--- a/AppTel.Web/Content/Site.css
+++ b/AppTel.Web/Content/Site.css
@@ -22,3 +22,19 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.appbox {
+    width: 90%;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 15px;
+    height: 300px;
+    margin: 5px;
+    background-color: tomato;
+}
+
+.appbox h2 {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 200px;
+}
